--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 </head>
 
 <body>
-    
+    <header class="header">
+        <a href="index.html">
+            <img class="header_logo" src="img/logo.png" alt="Logotipo">
+        </a>
+    </header>
+
+    <nav class="navegacion">
+        <a class="navegacion_enlace navegacion_enlace--activo" href="#">Tienda</a>
+        <a class="navegacion_enlace" href="#">Nosotros</a>
+    </nav>
 </body>
+
 </html>
