Creando la pagina de nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,16 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Nosotros</h1>
+        <h1>Sobre Nosotros</h1>
+
+        <div class="nosotros">
+            <div class="nosotros_contenido">
+                <p>equat interdum iaculis s, quavida ultricies purus ultrices litora. Vulputate senectus primis dis risus augue fames pretium, condimentum donec eros lobortis nisi consequat etiam, tellus morbi phasellus nibh ad volutpat. Eros quisque mattis sed senectus primis tempus cursus sociosqu, etiam leo nunc enim risus orci sollicitudin, lobortis litora massa vulputate id dis curabitur.</p>
+                <p>ollicitudultriciesitora. Vulputate senectus primis dis risus augue fames pretium, condimentum donec eros lobortis nisi consequat etiam, tellus morbi phasellus nibh ad volutpat. Eros quisque mattis sed senectus primis tempus cursus sociosqu, etiam leo nunc enim risus orci sollicitudin, lobortis litora massa vulputate id dis curabitur.</p>
+            </div>
+            <img class="nosotros__imagen" src="img/nosotros.jpg" alt="imagen nosostros">
+        </div>
+
     </main>
 
     <footer class="footer">
