--- a/nosotros.html
+++ b/nosotros.html
@@ -36,6 +36,33 @@
 
     </main>
 
+    <section class="contenedor comprar">
+        <h2>¿Por que comprar con nosotros?</h2>
+
+        <div class="bloques">
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_1.png" alt="por que comprar">
+                <h3 class="bloque__titulo">El mejor precio</h3>
+                <p>t interdum iaculis s, quavida ultricies purus ultrices lt interdum iaculis s, quavida ultricies purus ultrices l</p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_2.png" alt="por que comprar">
+                <h3 class="bloque__titulo">Para Devs</h3>
+                <p>t interdum iaculis s, quavida ultricies purus ultrices lt interdum iaculis s, quavida ultricies purus ultrices l</p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_3.png" alt="por que comprar">
+                <h3 class="bloque__titulo">Envio gratis</h3>
+                <p>t interdum iaculis s, quavida ultricies purus ultrices lt interdum iaculis s, quavida ultricies purus ultrices l</p>
+            </div> <!--.bloque-->
+            <div class="bloque">
+                <img class="bloque__imagen" src="img/icono_4.png" alt="por que comprar">
+                <h3 class="bloque__titulo">La mejor calidad</h3>
+                <p>t interdum iaculis s, quavida ultricies purus ultrices lt interdum iaculis s, quavida ultricies purus ultrices l</p>
+            </div> <!--.bloque-->
+        </div><!--.bloques-->
+    </section>
+
     <footer class="footer">
         <p class="footer__texto">Front End Store - Todos los derechos reservados 2024.</p>
     </footer>
