CSS a la seccion de producto

--- a/productos.html
+++ b/productos.html
@@ -24,7 +24,26 @@
     </nav>
 
     <main class="contenedor">
-        <h1>Productos</h1>
+        <h1>React JS</h1>
+
+        <div class="camisa">
+            <img src="img/3.jpg" alt="imagen">
+
+            <div class="camisa__contenido">
+                <p>Lorem ipsum dolor sit amLorem ipsum dolor sit amet consectetur adipiscing elit platea egestas, convallis faucibus sociosqu vivamus laoreet non vulputate habitant ut metus, posuere dapibus himenaeos ullamcorper vitae pet consectetur adipiscing elit platea egestas, convallis faucibus sociosqu vivamus laoreet non vulputate habitant ut metus, posuere dapibus himenaeos ullamcorper vitae p</p>
+
+                <form class="formulario">
+                    <select class="formulario__campo">
+                        <option disabled selected>--Seleccionar talla--</option>
+                        <option>chica</option>
+                        <option>mediana</option>
+                        <option>grande</option>
+                    </select>
+                    <input class="formulario__campo" type="number" placeholder="cantidad" min="1">
+                    <input class="formulario__submit" type="submit" value="agregar al carrito">
+                </form>
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
